syntax = "proto2";

option java_multiple_files = true;
option java_package = "com.android.tools.idea.serverflags";

// A test server flags
message ServerFlagTest {
  optional string content = 1;
}